@@ -78,8 +78,8 @@
         <IsPartOfProject Value="True"/>
         <IsVisibleTab Value="True"/>
         <EditorIndex Value="9"/>
-        <TopLine Value="104"/>
-        <CursorPos X="9" Y="126"/>
+        <TopLine Value="145"/>
+        <CursorPos X="32" Y="182"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit>
@@ -489,22 +489,6 @@
     </Units>
     <JumpHistory HistoryIndex="29">
       <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="29" Column="21"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="122" TopLine="90"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="70" Column="26" TopLine="53"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPMenuUnit.pas"/>
-        <Caret Line="28" Column="22" TopLine="10"/>
-      </Position>
-      <Position>
         <Filename Value="BDPPaletteEditorUnit.pas"/>
         <Caret Line="20" Column="18" TopLine="16"/>
       </Position>
@@ -607,6 +591,22 @@
       <Position>
         <Filename Value="BDPDrawAreaUnit.pas"/>
         <Caret Line="124" TopLine="102"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPDrawAreaUnit.pas"/>
+        <Caret Line="38" Column="29" TopLine="8"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPDrawAreaUnit.pas"/>
+        <Caret Line="40"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPDrawAreaUnit.pas"/>
+        <Caret Line="65" Column="24" TopLine="43"/>
+      </Position>
+      <Position>
+        <Filename Value="BDPDrawAreaUnit.pas"/>
+        <Caret Line="167" TopLine="137"/>
       </Position>
     </JumpHistory>
     <RunParams>
